Fix suggestions horizontally overflowing window

--- a/src/SIL.XForge.Scripture/ClientApp/src/app/app.component.scss
+++ b/src/SIL.XForge.Scripture/ClientApp/src/app/app.component.scss
@@ -38,6 +38,7 @@
         flex-direction: column;
         flex: 1;
         overflow-y: auto;
+        overflow-x: hidden;
         padding: 10px 20px 14px 20px;
         @include media-breakpoint-only(xs) {
           padding: 0px 4px 4px 4px;
